systemtray: Avoid dbus calls after exit

StatusNotifierItemHost has the lifespan of the application. If we have
the lifespan of the application calling unregister isn't achieving
anything useful.

It's problematic to do DBus calls after the event loop has stop.

See https://errors-eval.kde.org/organizations/kde/issues/178/

BUG: 460814
FIXED-IN: 5.26.2